<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_vertical" android:padding="60dp"
              android:background="@android:drawable/dialog_holo_light_frame">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mMenu_continue"
            android:id="@+id/bttnContinue" android:layout_gravity="center_horizontal" android:layout_weight="1"
            android:layout_margin="20dp" android:background="@color/green_main"
            android:onClick="OnClick" android:textColor="@android:color/white"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mMenu_New_Game"
            android:id="@+id/bttnNewGame" android:layout_gravity="center_horizontal" android:layout_weight="1"
            android:layout_margin="20dp" android:background="@color/green_main"
            android:onClick="OnClick" android:textColor="@android:color/white"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mMenu_How_To"
            android:id="@+id/bttnHowTo" android:layout_gravity="center_horizontal" android:layout_weight="1"
            android:layout_margin="20dp" android:background="@color/green_main"
            android:onClick="OnClick" android:textColor="@android:color/white"/>
</LinearLayout>